# cameramcu

./: CMakeLists.txt  camera_config.yaml  main.cpp  package.xml
description/urdf/: gimbal_description.urdf.xacro
hikvision/: CMakeLists.txt
hikvision/config/: camera_config.yaml
hikvision/include/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvObsoleteInterfaces.h  ObsoleteCamParams.h  hikvision_camera.h
hikvision/src/: hikvision_camera.cpp
include/: Armor.hpp  CRC.h  PnPSolver.hpp  ProcessorFactory.hpp  Protocol.hpp  Serial.hpp  ovdetector.hpp  transform.hpp
launch/: helios_serial.launch.py
mindvision/: CMakeLists.txt  camera_config.yaml
mindvision/src/: ImageInput.h  MVCameraInput.cpp  MVCameraInput.h
serial/: CMakeLists.txt
src/: CRC.cpp  PnPsolver.cpp  Serial.cpp  ovdetector.cpp
